@@ -1,6 +1,7 @@
 phpAdsNew - ChangeLog
 
 v 1.9.2 - 08/03/2001
+			+ Bugfix: weekly stats didn't work correctly with multiple banners client (Cedric thanks to Niels)
 			+ Removed config2.inc.php (Phil)
 			+ Bugfix: removed hourly graph for compact statistics (Niels)
 			+ Bugfix: client statistics is working again, no more SQL errors (Niels)
